--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.stickearn.moviefavourite.MainApplication"
+        android:name=".MainApplication"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,14 +18,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        android:fullBackupContent="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.stickearn.moviefavourite.view.login.LoginActivity"
+        <activity android:name=".view.favouritemovie.FavouriteMovieActivity"></activity>
+        <activity android:name=".view.moviedetail.MovieDetailActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
-            >
-        </activity>
-        <activity android:name="com.stickearn.moviefavourite.view.main.activity.MainActivity">
+            android:configChanges="orientation|screenSize"
+            />
+        <activity
+            android:name=".view.login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
+        <activity
+            android:name=".view.main.activity.MainActivity"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
