--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         appcompat_version = "1.1.0"
         core_version = "1.2.0"
         activity_ktx_version = "1.1.0"
-        constraint_version = "1.1.3"
+        constraint_version = "2.0.0-beta8"
         retrofit_version = "2.7.0"
         dagger_version = "2.25.4"
         glide_version = "4.11.0"
