- remove unused class and function - bug fixing scroll in detail movie

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,8 @@ android {
         def BASE_URL = "BASE_URL"
         def API_KEY = "API_KEY"
         def BASE_IMAGE_URL = "BASE_IMAGE_URL"
+        def DATABASE_NAME = "DATABASE_NAME"
+        def DATABASE_PASSWORD = "DATABASE_PASSWORD"
         release {
             minifyEnabled false
             shrinkResources false
@@ -28,6 +30,8 @@ android {
             buildConfigField "String", API_KEY, "\"ae9fe90e99a9f97c85099d41ec148e54\""
             buildConfigField "String", BASE_IMAGE_URL, "\"http://image.tmdb.org/t/p/w500\""
             buildConfigField "String", BASE_URL, "\"https://api.themoviedb.org/3/\""
+            buildConfigField "String", DATABASE_NAME, "\"movieFavouriteDb\""
+            buildConfigField "String", DATABASE_PASSWORD, "\"movieFavouritePass\""
         }
         debug{
             minifyEnabled false
@@ -36,6 +40,8 @@ android {
             buildConfigField "String", API_KEY, "\"ae9fe90e99a9f97c85099d41ec148e54\""
             buildConfigField "String", BASE_IMAGE_URL, "\"http://image.tmdb.org/t/p/w500\""
             buildConfigField "String", BASE_URL, "\"https://api.themoviedb.org/3/\""
+            buildConfigField "String", DATABASE_NAME, "\"movieFavouriteDb\""
+            buildConfigField "String", DATABASE_PASSWORD, "\"movieFavouritePass\""
         }
     }
 
