--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         def DATABASE_NAME = "DATABASE_NAME"
         def DATABASE_PASSWORD = "DATABASE_PASSWORD"
         release {
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField "String", API_KEY, "\"ae9fe90e99a9f97c85099d41ec148e54\""
             buildConfigField "String", BASE_IMAGE_URL, "\"http://image.tmdb.org/t/p/w500\""
